--- a/Chrome Extension/popup.css
+++ b/Chrome Extension/popup.css
@@ -60,6 +60,7 @@
     background-color: #0077C8;
     padding: 10px 40px 50px;
     text-align: center;
+    color: white;
   }
   
   /* Clear floats after the header */
@@ -77,6 +78,7 @@
     padding: 10px;
     float: left;
     font-size: 16px;
+    box-sizing: border-box;
   }
   
   /* Style the "Add" button */
@@ -91,10 +93,10 @@
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
+    margin: 0;
+    box-sizing: border-box;
 
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
   }
   
