--- a/Chrome Extension/popup.css
+++ b/Chrome Extension/popup.css
@@ -30,6 +30,7 @@
     background: #eee;
     font-size: 12px;
     transition: 0.2s;
+    user-select: none;
   }
   
   /* Set all odd list items to a different color (zebra-stripes) */
@@ -48,6 +49,7 @@
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
+    user-select: none;
   }
   
   .close:hover {
@@ -95,8 +97,6 @@
     border-radius: 0;
     margin: 0;
     box-sizing: border-box;
-
-    -webkit-user-select: none;
     user-select: none;
   }
   
