fixed input border styling

--- a/Chrome Extension/popup.css
+++ b/Chrome Extension/popup.css
@@ -55,13 +55,10 @@
   
   .close:hover {
     background-color: #e61d1d;
-    color: white;
     transition: 0.2s;
   }
   
   .header {
-    background-color: #ff0000;
-    color: white;
     display: grid;
   }
 
@@ -119,7 +116,7 @@
 
   input {
     grid-column: 1;
-    border-width: 1px solid #eee
+    border: 2px solid #ccc;
   }
 
   input:focus {
@@ -139,8 +136,8 @@
     background: #ccc;
     border-width: 0px;
     display: flex;
-    align-items:center;
-    justify-content:center;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     transition: 0.3s;
     user-select: none;
