--- a/Chrome Extension/options.css
+++ b/Chrome Extension/options.css
@@ -1,8 +1,17 @@
-.options{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    text-align: left;
+* {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.option-page-content {
+    margin: 0 20px 24px 20px;
+    max-width: 711px;
+    width: 711px;
+}
+
+.option-page-box {
+    display: flex;
+    justify-content: center
 }
 
 h1{
@@ -14,6 +23,10 @@ h1{
 
 .sidebar-title{
     text-align: center;
+}
+
+.page-title{
+    margin: 40px 0;
 }
 
 label{
@@ -36,6 +49,7 @@ label{
 
 #sidebar-content {
     position: relative;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
